--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
     "@tanstack/react-query": "^5.64.2",
-    "@worldcoin/minikit-js": "1.5.0",
-    "eruda": "^3.2.3",
+    "framer-motion": "^12.0.5",
+    "jose": "^5.9.6",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "posthog-js": "^1.210.2",
+    "posthog-node": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.22.11"
