--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
+    "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
     "@tanstack/react-query": "^5.64.2",
@@ -21,7 +22,7 @@
     "posthog-node": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.22.11"
+    "viem": "^2.22.14"
   },
   "devDependencies": {
     "@types/node": "^20",
