--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
+    "@neynar/react": "^0.9.7",
     "@tanstack/react-query": "^5.64.2",
     "framer-motion": "^12.0.5",
     "jose": "^5.9.6",
