--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
     "@tanstack/react-query": "^5.64.2",
+    "ethers": "5.x",
     "framer-motion": "^12.0.5",
     "jose": "^5.9.6",
+    "ky": "^1.7.4",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "posthog-js": "^1.210.2",
