--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "frames",
+    "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate",
+    "prisma:init": "prisma init"
   },
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
+    "@libsql/client": "^0.14.0",
+    "@prisma/adapter-libsql": "^6.3.1",
+    "@prisma/client": "^6.3.1",
     "@tanstack/react-query": "^5.64.2",
     "ethers": "5.x",
     "framer-motion": "^12.0.5",
