--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "prisma:init": "prisma init"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
     "@libsql/client": "^0.14.0",
+    "@mui/material": "^6.4.2",
     "@prisma/adapter-libsql": "^6.3.1",
     "@prisma/client": "^6.3.1",
     "@tanstack/react-query": "^5.64.2",
