--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/auth-kit": "^0.6.0",
+    "@farcaster/frame-node": "^0.0.13",
     "@farcaster/frame-sdk": "^0.0.26",
     "@frames.js/debugger": "^0.4.1",
     "@libsql/client": "^0.14.0",
