--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.0.5",
     "jose": "^5.9.6",
     "ky": "^1.7.4",
+    "lucide-react": "^0.474.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "posthog-js": "^1.210.2",
