--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "posthog-node": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.22.14"
+    "viem": "^2.22.14",
+    "wagmi": "^2.14.12"
   },
   "devDependencies": {
     "@types/node": "^20",
